Updated with scss and labels

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="manifest" href="manifest.json">
     <title>Space Game</title>
-    <link rel='stylesheet' href='build/bundle.css'>
-    <script defer src='build/bundle.js'></script>
+    <link rel='stylesheet' href='build/spacegame.css'>
+    <script defer src='build/spacegame.js'></script>
 </head>
 <body></body>
 </html>
